Fix typo in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
   <section>
       <div id="message">
-          Welcome! Iniatlizing Sync...</div>
+          Welcome! Initializing Sync...</div>
       </div>
       <input type="text" id="syncField" placeholder="Things you type in here will synchronise across browser tabs!" disabled/>
         <br/>Open this page in a few tabs to test!
