--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <canvas id="drawingSurface" width="320" height="400"></canvas>
   </div>
 
-
+  <script src="//media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
+  <script src="//media.twiliocdn.com/sdk/js/sync/v0.2/twilio-sync.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
 </body>
